# product-django-manager

./: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  fix_static_load.py  manage.py  package-lock.json  package.json  populate_price_history.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: release-homolog.yaml
api/: README.md  serializers.py  tests.py  urls.py  views.py
basecoat_project/: asgi.py  settings.py  urls.py  wsgi.py
basecoat_project/static/css/: input.css  output.css
docs/: adicionando-basecoat-ui.md  django-allauth-tutorial.md  roadmap.md  setup-docker-postgres.md
kore-product-manager/: asgi.py  settings.py  urls.py  wsgi.py
products/: admin.py  forms.py  models.py  urls.py  views.py
products/management/: __init__.py
products/management/commands/: populate_price_history.py
products/migrations/: 0001_initial.py  0008_pricehistory.py
products/tests/: test_config.py  test_forms.py  test_integration.py  test_models.py  test_simple_example.py  test_utils.py  test_views.py
static/css/: input.css  output.css
static/js/: main.js  price_history_overview.js  product_list.js  profile.js  utils.js
templates/: base.html
templates/account/: login.html  password_change.html  profile.html  signup.html
templates/products/: bulk_action_modal.html  bulk_delete_modal.html  category_confirm_delete.html  price_history.html  price_history_overview.html  product_confirm_delete.html  product_delete_modal.html  product_detail_modal.html  product_form.html  product_list.html  product_movement_overview.html
