[project]
name = "kore-product-manager"
version = "0.1.0"
description = "Simple product manager using Basecoat UI and Django."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.2",
    "django-allauth>=65.14.3",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "gunicorn>=25.1.0",
    "psycopg>=3.3.2",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.30.1",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "django-browser-reload>=1.21.0",
    "django-watchfiles>=1.4.0",
    "dotenv>=0.9.9",
    "factory-boy>=3.3.3",
    "poethepoet>=0.41.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.12.0",
    "pytest-watch>=4.2.0",
]

[tool.poe.tasks]
# Npm tasks
npm_watch = { shell = "npm run watch" }
npm_build = { shell = "npm run build" }

# Django tasks
runserver = "python manage.py runserver"
migrate = { shell = "python manage.py makemigrations && python manage.py migrate" }

# Test Tasks
pytest = { shell = "pytest" }
coverage = { shell = "coverage run -m pytest" }
report = { shell = "coverage report" }
coveragehtml = { shell = "coverage html" }

# Taks sequences
[tool.poe.tasks.test]
sequence = ["coverage", "coveragehtml", "report"]

[tool.poe.tasks.dev]
sequence = ["npm_watch", "runserver"]

[tool.poe.tasks.server]
sequence = ["runserver"]
